task(step-07): задание на перенос смены цены в UseCase и Handler
